# MulleScion

./: .gitignore  .travis.yml  BUILD.md  CMakeLists.txt  CMakeSourcesAndHeaders.txt  INSTALL  LICENSE  MulleScion.podspec  MulleScion.sublime-project  MulleScionObjectModel.dot  README  README.md  RELEASENOTES  RELEASENOTES.md  generate-brew-formula  generate-brew-formula.sh  generate-dot.sh  generate-xodebuild-brew-formula.sh  installer  release.sh
.bootstrap/: embedded_repositories  repositories
.bootstrap/.defaults/: TARGET
.bootstrap/settings/: embedded_repositories  repositories
.mulle-env/etc/: environment-global.sh
.mulle-env/share/: environment-project.sh  environment-share.sh
.mulle-sde/share/: extension
.mulle-sourcetree/etc/: config
.mulle/etc/env/: environment-global.sh  environment-host-terodde.sh  environment-host-walitza.sh
.mulle/etc/project/: formula-info.sh  generate-formula.sh  publisher-info.sh  version-info.sh
.mulle/etc/sourcetree/: config
.mulle/share/env/: environment-extension.sh  environment-plugin.sh  environment-project.sh  environment-share.sh  tool-extension
.mulle/share/sde/: extension
.mulle/share/sourcetree/: config
MulleScion.xcodeproj/: project.pbxproj
MulleScion.xcodeproj/xcshareddata/xcschemes/: All.xcscheme  MulleScion (iOS Framework).xcscheme  OSX.xcscheme  Show Documentation in Webserver.xcscheme  iOS.xcscheme  mulle-scion.xcscheme
MulleScionTemplates (iOS Framework)/: MulleScionTemplates (iOS Framework)-Info.plist
MulleScionTemplates.xcodeproj/: project.pbxproj
MulleScionTemplates.xcodeproj/xcshareddata/xcschemes/: MulleScionTemplates (iOS).xcscheme  MulleScionTemplates.xcscheme  mulle-scion.xcscheme
cmake/: DependenciesAndLibraries.cmake  Headers.cmake  HeadersAndSources.cmake  Sources.cmake  _Dependencies.cmake
cmake/share/: CreateLoaderIncObjC.cmake  DefineLoaderIncObjC.cmake  Environment.cmake  ExecutableObjC.cmake  LinkManifestC.cmake  OptimizedLinkObjC.cmake  PreFiles.cmake  PreLibraryCAux.cmake  StandaloneC.cmake  StartupC.cmake
dox/: !_Introduction.scion  #!.scion  Environment_Variables.scion  Expressions.scion  Formatting_Options.scion  Global_Variables.scion  MulleScionObjectModel.dot  NSMakeRange.scion  [].scion  __demo.scion  __page.scion  __scion_banner.scion  __scion_defines.scion  __scion_footer.scion  __scion_macros.scion  __scion_navigation.scion  __scion_page.scion  __scion_style.scion  _body.scion  _empty.scion  _hackish.scion  _wrapper.scion  block.scion  create-html-dox.sh  define.scion  dot.scion  error2.scion  error3.scion  error4.scion  error5.scion  extends.scion  filter.scion  for.scion  generate-dot.sh  if.scion  includes.scion  index.scion  log.scion  macro.scion  properties.plist  (+11 more)
dox/MulleScionDataFlow.graffle/: image1.tiff  image2.tiff
dox/MulleScionTemplatesDataFlow.graffle/: data.plist
examples/ExampleDatasource/: Club.h  Club.m  Example.h  Example.m  ExampleBase.h  ExampleBase.m  ExampleDatasource-Info.plist  Liga.h  Liga.m
examples/ExampleDatasource.xcodeproj/: project.pbxproj
examples/ExampleDatasource/TestExampleDatasource/: main.m
examples/inline-mulle-scion/: main.m
examples/inline-mulle-scion.xcodeproj/: project.pbxproj
examples/minimal-mulle-scion/: main.m  test.plist  test.scion
examples/minimal-mulle-scion.xcodeproj/: project.pbxproj
examples/protected-mulle-scion/: main.m  ptest.scion
examples/protected-mulle-scion.xcodeproj/: project.pbxproj
src/: Hoedown+MulleScionPrinting.h  Hoedown+MulleScionPrinting.m  MulleCommonObjCRuntime.h  MulleMongoose.h  MulleMongoose.m  MulleMutableLineNumber.h  MulleMutableLineNumber.m  MulleObjCCompilerSettings.h  MulleObjCLoader+MulleScion.h  MulleObjCLoader+MulleScion.m  MulleScion-Info.plist  MulleScion.h  MulleScion.m  MulleScionDataSourceProtocol.h  MulleScionDataSourceProtocol.m  MulleScionNull.h  MulleScionNull.m  MulleScionObjectModel+BlockExpansion.h  MulleScionObjectModel+BlockExpansion.m  MulleScionObjectModel+Description.h  MulleScionObjectModel+Description.m  MulleScionObjectModel+Graphviz.m  MulleScionObjectModel+MacroExpansion.h  MulleScionObjectModel+MacroExpansion.m  MulleScionObjectModel+MulleMongoose.h  MulleScionObjectModel+MulleMongoose.m  MulleScionObjectModel+NSCoding.h  MulleScionObjectModel+NSCoding.m  MulleScionObjectModel+Parsing.h  MulleScionObjectModel+Parsing.m  MulleScionObjectModel+Printing.h  MulleScionObjectModel+Printing.m  MulleScionObjectModel+StringReplacement.h  MulleScionObjectModel+StringReplacement.m  MulleScionObjectModel+TraceDescription.h  MulleScionObjectModel+TraceDescription.m  MulleScionObjectModel.h  MulleScionObjectModel.m  MulleScionOutputProtocol.h  MulleScionParser+Parsing.h  (+74 more)
src/hoedown/: Hoedown+MulleScionPrinting.h  Hoedown.h  Hoedown.m  LICENSE  NSData+Hoedown.h  NSData+Hoedown.m  NSString+TrimTextFromExamples.h  NSString+TrimTextFromExamples.m
src/mongoose/: LICENSE  mongoose.c
test/: compare-parse-speed-to-unarchive-speed.sh  run-test
test/0_noleak/: basic.scion
test/commands/define/: define-1.scion  define-1.stdout
test/commands/extends/: _header.scion  extends.stdout
test/commands/filter/: filter-html.stdout  filter-mixed.scion  filter-mixed.stdout  filter-nested-parameter-2.scion
test/commands/for/: array-for.scion  dictionary-for.scion  for-variables.scion  scionist-for.plist  scionist-for.scion  simple-for.scion
test/commands/if/: more-multi-line-if.scion
test/commands/includes/: includes.scion
test/commands/macro/: macro-in-macro.scion  simple-macro.scion
test/commands/misc/: error.errors  error.scion
test/commands/while/: simple-loop.scion
test/comments/: comment-inside-commands.scion  comment-leaves-no-hole.scion  comment-snarfs-trailing-lf.scion  multi-line-comments-leaves-no-hole.scion
test/expressions/dictionary/: mixed-number-string-key.scion  (+2 more)
test/syntax/: inline-print.scion  straycloser.scion
tests/: README.md  build-for-test.sh  default.plist  run-all-scion-tests.sh  run-scion-test.sh  run-test.sh  scion-tests.sh
tests/syntax/: straycloser.stdout
tests/whitespaces/: preserve_whitespaces.stdout
(+88 files in other folders)
